# go2_ros2_sdk_cyclonedds

./: .gitignore  Makefile  README.md
docker/: Dockerfile  compose.yml  cyclonedds.xml.template  entrypoint.sh
go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/config/: cyclonedds_config.rviz  mapper_params_online_async.yaml  nav2_params.yaml
go2_robot_sdk/go2_robot_sdk/: __init__.py  go2_driver_node.py
go2_robot_sdk/go2_robot_sdk/infrastructure/: __init__.py
go2_robot_sdk/go2_robot_sdk/infrastructure/sensors/: lidar_decoder.py
go2_robot_sdk/launch/: robot.launch.py
go2_robot_sdk/urdf/: go2.urdf
lidar_processor_cpp/src/: pointcloud_aggregator_node.cpp
scripts/: setup_network.sh
speech_processor/: package.xml  setup.py
speech_processor/speech_processor/: nav2_status_node.py  stt_node.py  tts_node.py  voice_command_node.py  waypoint_nav_node.py
unitree_api/: CMakeLists.txt
unitree_go/: CMakeLists.txt
